Added render for image and fixed related bugs

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV = development
 PORT = 8000
-DATABASE = "mongodb+srv://kishore:<PASSWORD>@cluster0.puxwr7c.mongodb.net/news-app"
+DATABASE = "mongodb+srv://kishore:<PASSWORD>@cluster0.puxwr7c.mongodb.net/news-db"
 DATABASE_PASSWORD = kishore123
